tests/baselines/reference/objectLiteralWithSemicolons1.errors.txt
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,12): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,15): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralWithSemicolons1.ts(1,17): error TS2304: Cannot find name 'c'.


==== tests/cases/compiler/objectLiteralWithSemicolons1.ts (3 errors) ====
    var v = { a; b; c }
               ~
!!! error TS1005: ':' expected.
                  ~
!!! error TS1005: ':' expected.
                    ~
!!! error TS2304: Cannot find name 'c'.